Search z-index fix

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -508,7 +508,7 @@
 								top: $header-top-line-height;
 								width: 220px;
 								height: $header-top-line-height;
-								z-index: 100;
+								z-index: 90;
 								input {
 									display: block;
 									width: 100%;
